--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@studio-freight/react-lenis": "^0.0.47",
     "framer-motion": "^11.2.8",
     "next": "14.2.3",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
