--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-responsive": "^10.0.0",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "^20",
